syntax = "proto3";
package orders.transactions.make;

message TransactionResponse {
  string order_i_d = 1;
}